fixed logos not showing up and foradayapp.com link

--- a/style.sass
+++ b/style.sass
@@ -43,6 +43,12 @@ $container-width: 820px
   $t: 0.5s
   @include css3-transition(opacity,$t)
 
+.special_clickarea
+  position: absolute
+  top: 1100px
+  left: 70px
+  cursor: pointer
+
 .clickarea
   width: 100%
   height: 100%
